--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,12 @@ html, body {
   height: auto;
   overflow-x: hidden;
 }
+
+@layer utilities {
+  .line-clamp-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+  }
+}
